Assignment 3/hw3.txt
Q1:
case_long_iso_time_style is a label for goto statement
Because it is a label do nothing, and compiler will ignore it.
Since the compiler will ignore it, it is not necessary to remove it

Q2:
It can't be understand by foreign language speaker.
If it is a internatial company, it will bring lots of inconvenience

Q3
this script will crush
Because in the code, when the variable numlines < 0, function will choose from a no lines file, if we dont set the number of lines to 0. It is a undefined behavior

Q4
run script in python3 shows:
File "randline.py", line 65
    except IOError as (errno, strerror):
                      ^
SyntaxError: invalid syntax
The correct way should be:
except OSError as err:
       parser.error("OS error: {0}".format(err))
